--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NotesManager">
-        <activity android:name=".activites.AddNoteActivity"></activity>
+        <activity android:name=".activites.SortedActivity"></activity>
+        <activity android:name=".activites.AddNoteActivity" />
         <activity android:name=".activites.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
